...
    func dismissProgress() {
        progressIndicator.stopAnimating()
        progressIndicator.removeFromSuperview()
    }
    
    func showError(error: String) {
        let alert = UIAlertController(title: "Erro!", message: error, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
        present(alert, animated: true, completion: nil)
    }
    
    func showProgress() {
        progressIndicator.startAnimating()
        view.addSubview(progressIndicator)
...
